--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "dotenv-vault": "^1.22.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "needle": "^3.2.0",
