--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "unicorn/filename-case": "off",
     "unicorn/no-empty-file": "off",
     "class-methods-use-this": "off", // !
+    "import/no-extraneous-dependencies": "off",
     "unicorn/prevent-abbreviations": [
       "error",
       {
