--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "dotenv-vault": "^1.22.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "needle": "^3.2.0",
     "nodemailer": "^6.9.1",
