--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^8.37.0",
-    "eslint": "^8.37.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-unicorn": "^46.0.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7"
