--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "dotenv-vault": "^1.22.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "https-proxy-agent": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "needle": "^3.2.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
+    "socks-proxy-agent": "^8.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
