--- a/.eslintrc
+++ b/.eslintrc
@@ -21,13 +21,14 @@
     "unicorn/no-null": "off",
     "import/extensions": "off",
     "default-param-last": "off",
+    "no-use-before-define": "off",
+    "max-classes-per-file": "off",
     "no-restricted-syntax": "off", // !
     "unicorn/filename-case": "off",
     "unicorn/no-empty-file": "off",
     "class-methods-use-this": "off", // !
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
-    "no-use-before-define": "off",
     "unicorn/prevent-abbreviations": [
       "error",
       {
