--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.1",
+    "@commitlint/config-conventional": "^18.4.0",
+    "@commitlint/prompt-cli": "^18.4.1",
     "@eslint/js": "^8.37.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
@@ -42,6 +45,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-unicorn": "^46.0.0",
+    "husky": "^8.0.3",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7"
   }
